<resources>

    <string name="app_name">Zendesk Metadata Demo App</string>
    <string name="app_name_toolbar">Zendesk Demo App</string>
    <string name="channel_key">{Add your channel key here}</string>
    
    <!-- TOOL BAR -->

    <string name="about">About</string>
    <string name="about_title">About this app</string>
    <string name="about_message">This demo app is intended to help developers get up and running with the Zendesk SDK by providing a working example of the software, and providing some useful actions to explore the end-user experience.</string>

    <!-- CARDS -->

    <string name="initialize_card_title">Initialize the SDK</string>
    <string name="initialize_card_description">Initializes the Zendesk SDK with the channel key specified in the demo source code. Initializing will load your settings, and prepare the SDK to show a conversation.</string>
    <string name="initialize_button">Initialize Zendesk</string>

    <string name="metadata_fields_card_title">Add Metadata Fields to conversation</string>
    <string name="metadata_fields_card_description">Allows values for conversation fields to be set in the SDK to add contextual data about the conversation.</string>
    <string name="metadata_add_fields_button">Add fields</string>
    <string name="metadata_clear_fields_button">Clear fields</string>

    <string name="metadata_tags_card_title">Add Metadata Tags to conversation</string>
    <string name="metadata_tags_card_description">Allows values for conversation tags to be set in the SDK to add contextual data about the conversation.</string>
    <string name="metadata_add_tags_button">Add tags</string>
    <string name="metadata_clear_tags_button">Clear tags</string>

    <string name="conversation_card_title">Show the conversation view</string>
    <string name="conversation_card_description">Displays the conversation screen for the initial conversation created for your user. A user and a new conversation will automatically be created if they don\'t exist. Ensure you have previously initialized the Zendesk SDK.</string>
    <string name="conversation_button">Show conversation</string>

    <!-- SNACK BAR -->

    <string name="msg_init_success">Initialization Successful</string>
    <string name="msg_init_error">Initialization Failed</string>

    <string name="msg_add_fields">Conversation fields added</string>
    <string name="msg_clear_fields">Conversation fields cleared</string>
    <string name="msg_add_tags">Conversation tags added</string>
    <string name="msg_clear_tags">Conversation tags cleared</string>

</resources>