<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/MetadataCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        card_view:cardCornerRadius="@dimen/card_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                style="@style/style_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metadata_fields_card_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/metadata_fields_card_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/MetadataAddFieldsButton"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metadata_add_fields_button" />
                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:id="@+id/MetadataClearFieldsButton"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metadata_clear_fields_button" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</merge>