<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ConversationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="start"
        card_view:cardCornerRadius="@dimen/card_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                style="@style/style_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversation_card_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/conversation_card_description" />

            <Button
                android:id="@+id/StartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/conversation_button" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</merge>